--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,9 @@ dependencies:
   firebase_core: ^2.21.0
   firebase_auth: ^4.12.1
   flutter_svg: ^2.0.9
+  quill_html_editor: ^2.2.7
+  flutter_html: ^3.0.0-beta.2
+  html: ^0.15.4
 
 dev_dependencies:
   flutter_test:
