--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   flutter_html: ^3.0.0-beta.2
   html: ^0.15.4
   flutter_datetime_picker_plus: ^2.1.0
+  flutter_native_splash: ^2.3.5
 
 dev_dependencies:
   flutter_test:
