--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,9 @@ dependencies:
   html: ^0.15.4
   flutter_datetime_picker_plus: ^2.1.0
   flutter_native_splash: ^2.3.5
+  firebase_analytics: ^10.7.1
+  firebase_crashlytics: ^3.4.5
+  google_mobile_ads: ^3.1.0
 
 dev_dependencies:
   flutter_test:
